# vid_rectify

./: CMakeLists.txt  README.md  package.xml
launch/: vid_rectify.launch  vid_rectify_320x240.launch  vid_rectify_640x480.launch
src/: rectification_node.cpp
yaml/: m210_stereo_param_640x480.yaml
