<?xml version="1.0"?>
<package format="2">
  <name>vid_rectify</name>
  <version>1.0.0</version>
  <description>The vid_rectify package</description>

 <author email="shreyas.manjunath@iosb.fraunhofer.de"> Shreyas Manjunath</author> 
  <maintainer email="shreyas.manjunath@iosb.fraunhofer.de">Shreyas Manjunath</maintainer>

  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>message_filters</depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
